# esctr-environment

./: .dockerignore  .gitignore  Blog.md  Dockerfile  PLAN.md  README.md  SUBMISSION_CHECKLIST.md  __init__.py  ablation.py  generate_demo_artifacts.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train.py  train_4b.py
artifacts/: ablation_results.json  demo_action_graph.mmd  demo_episode_trace.json
invoice_extraction_env/: __init__.py
invoice_extraction_env/server/: app.py  environment.py
server/: app.py  environment.py  graders.py  gradio_ui.py  procedural.py  ui_styles.py
